--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,16 @@
 Package: multipleNCC
 Type: Package
-Title: Weighted Cox-regression for nested case-control data
-Version: 1.0
-Date: 2014-08-28
+Title: Weighted Cox-Regression for Nested Case-Control Data
+Version: 1.1
+Date: 2015-06-24
 Author: Nathalie C. Stoer, Sven Ove Samuelsen
 Maintainer: Nathalie C. Stoer <nathalcs@math.uio.no>
-Description: This package fit Cox proportional hazard models with a weighted 
-  partial likelihood. It handles one or multiple endpoints, additional matching 
+Description: Fits Cox proportional hazard models with a weighted partial 
+  likelihood. It handles one and multiple endpoints, additional matching 
   and makes it possible to reuse controls for other endpoints.
-Depends: survival, gam
+Depends: survival, mgcv
 License: GPL-2
-Packaged: 2014-09-19 12:44:29 UTC; Nathalie
 NeedsCompilation: no
+Packaged: 2015-07-02 10:29:46 UTC; Nathalie
 Repository: CRAN
-Date/Publication: 2014-09-19 15:06:25
+Date/Publication: 2015-07-02 13:42:45
