--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,16 @@
 Package: multipleNCC
 Type: Package
-Title: Weighted Cox-Regression for Nested Case-Control Data
-Version: 1.1
-Date: 2015-06-24
+Title: Weighted Cox-regression for Nested Case-Control Data
+Version: 1.2
+Date: 2015-09-26
 Author: Nathalie C. Stoer, Sven Ove Samuelsen
 Maintainer: Nathalie C. Stoer <nathalcs@math.uio.no>
-Description: Fits Cox proportional hazard models with a weighted partial 
-  likelihood. It handles one and multiple endpoints, additional matching 
+Description: Fit Cox proportional hazard models with a weighted 
+  partial likelihood. It handles one or multiple endpoints, additional matching 
   and makes it possible to reuse controls for other endpoints.
 Depends: survival, mgcv
 License: GPL-2
 NeedsCompilation: no
-Packaged: 2015-07-02 10:29:46 UTC; Nathalie
+Packaged: 2015-09-27 12:04:34 UTC; Nathalie
 Repository: CRAN
-Date/Publication: 2015-07-02 13:42:45
+Date/Publication: 2015-09-27 17:09:55
